force-app/main/default/objects/Employee__c/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <label>Current Location</label>
    <required>true</required>
    <scale>2</scale>
    <type>Location</type>
</CustomField>