force-app/main/default/objects/Employee__c/fields/Date_Of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Graduation__c</fullName>
    <label>Date Of Graduation</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>