force-app/main/default/objects/Employee__c/fields/Non_Tech__c.field-meta.xml
<CustomField>
    <fullName>Non_Tech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Tech</label>
    <type>Checkbox</type>
</CustomField>