force-app/main/default/objects/Employee__c/fields/Today_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_Date__c</fullName>
    <label>Today Date</label>
    <type>Time</type>
</CustomField>