force-app/main/default/objects/Employee__c/listViews/DemoQueue_Employee.listView-meta.xml
<ListView>
    <fullName>DemoQueue_Employee</fullName>
    <filterScope>Queue</filterScope>
    <label>DemoQueue</label>
    <queue>DemoQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>